<resources>
    <string name="app_name">PicMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="firebase_url">https://picme.firebaseio.com</string>

    <!-- Your Facebook App ID from your app settings on https://developers.facebook.com/ -->
    <!-- More details here: https://www.firebase.com/docs/android/guide/login/facebook.html -->
    <string name="server_client_ID">162576509261-tin52vobqivh2p8fkecdc99jt448gc0s.apps.googleusercontent.com</string>

    <!-- Your Twitter consumer key and secret from your app settings on https://apps.twitter.com/ -->
    <!-- More details here: https://www.firebase.com/docs/android/guide/login/twitter.html -->
    <string name="twitter_consumer_key">7MYnmN3XkAuxLB42sQiobkKW1</string>
    <string name="twitter_consumer_secret">PKNRX5Or50ulo33JE0x9VV0xtrZTsgW84QjtQOOnc1kMhtaVtA</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="share_button">Share Albums</string>
    <string name="view_button">View Albums</string>
    <string name="picme">PicMe</string>
    <string name="create_button">Create Album</string>
    <string name="friends_button">Friends</string>
    <string name="uploadImage">Upload Image</string>
    <string name="addAlbum">Add Album</string>
    <string name="deleteAlbum">Delete Album</string>
    <string name="addPhoto">Add Photo</string>
    <string name="deletePhoto">Delete Photo</string>
    <string name="title_activity_create_album">CreateAlbumActivity</string>
    <string name="title_activity_album_view">album_view</string>
    <string name="title_activity_photo_view">PhotoView</string>
    <string name="title_activity_image_detail">image_detail</string>
    <string name="title_activity_albumtitle">albumtitle</string>
    <string name="title_activity_upload_view">upload_view</string>
</resources>
